--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<header>
 					<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1>Nada Tibi</h1>
-					<p>Beauty & Lifestyle Blogger</p>
+					<p>ESPRIT Student</p>
 				</header>
 
 				<footer>
